--- a/data_pull_1990-1999.ipynb
+++ b/data_pull_1990-1999.ipynb
@@ -28,7 +28,7 @@
     "base_url = \"https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson\"\n",
     "magnitude = \"minmagnitude=5\"\n",
     "limit = \"limit=19999\"\n",
-    "year=0\n",
+    "year=1990\n",
     "\n",
     "# set up lists to hold reponse info\n",
     "time_ls = []\n",
@@ -40,8 +40,8 @@
     "place_ls = []\n",
     "\n",
     "# iterate through years\n",
-    "for x in range (0,11):\n",
-    "    time = f\"starttime=199{year}-01-01&endtime=199{year}-12-31\"\n",
+    "for x in range (0,10):\n",
+    "    time = f\"starttime={year}-01-01&endtime={year}-12-31\"\n",
     "    query_url = (f\"{base_url}&{time}&{magnitude}&{limit}\")\n",
     "    response = requests.get(query_url).json()\n",
     "\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4     12   30  1990  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-PythonData]*",
+   "display_name": "Python (PythonData)",
    "language": "python",
    "name": "myenv"
   },
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
