--- a/project_quake_stats.ipynb
+++ b/project_quake_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4  1980-01-01 19:19:05.900      1    1  1980  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The correlation between Magnitude and Significance is 0.04\n"
+      "The correlation between Magnitude and Depth is 0.04\n"
      ]
     },
     {
@@ -254,7 +254,7 @@
     "\n",
     "# calculate correlation\n",
     "correlation = st.pearsonr(all_earthquakes.Mag, all_earthquakes.Depth)\n",
-    "print(f\"The correlation between Magnitude and Significance is {rvalue.round(2)}\")\n",
+    "print(f\"The correlation between Magnitude and Depth is {rvalue.round(2)}\")\n",
     "\n",
     "plt.scatter(x_values, y_values)\n",
     "plt.plot(x_values, regress_values, \"r-\")\n",
