--- a/largest_earthquakes.ipynb
+++ b/largest_earthquakes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4  1980-01-01 19:19:05.900      1    1  1980  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,10 +216,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    NaN\n",
+       "1    NaN\n",
+       "2    NaN\n",
+       "3    NaN\n",
+       "4    NaN\n",
+       "Name: Year, dtype: category\n",
+       "Categories (4, object): [1980-89 < 1990-99 < 2000-09 < 2010-2020]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pd.to_numeric(all_earthquakes[\"Year\"])\n",
+    "\n",
+    "bins = [1980, 1990, 2000, 2010, 2020]\n",
+    "\n",
+    "labels = ['1980-89', '1990-99', '2000-09', '2010-2020']\n",
+    "\n",
+    "# Slice the data and place it into bins\n",
+    "pd.cut(all_earthquakes[\"Year\"], bins, labels=labels).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Place the data series into a new column inside of the DataFrame\n",
+    "all_earthquakes[\"Decade\"] = pd.cut(all_earthquakes[\"Year\"], bins, labels=labels)\n",
+    "all_earthquakes.head()"
+   ]
   }
  ],
  "metadata": {
